Bug 36589 - [Qt] GraphicsLayer: Timing functions don't work with transitions
Summary: [Qt] GraphicsLayer: Timing functions don't work with transitions
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Linux
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-03-25 03:42 PDT by Kim Grönholm
Modified: 2010-03-28 14:47 PDT (History)
3 users (show)

See Also:


Attachments
Test case for transform transition timing functions. (1.27 KB, text/html)
2010-03-25 03:42 PDT, Kim Grönholm
no flags Details
Fixes the timing functions in transform transitions with AC (4.07 KB, patch)
2010-03-25 03:57 PDT, Kim Grönholm
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kim Grönholm 2010-03-25 03:42:40 PDT
Created attachment 51619 [details]
Test case for transform transition timing functions.

When AC is enabled, setting the -webkit-transition-timing-function for transform transition has no effect. The default timing function is always used. See the test case.
Comment 1 Kim Grönholm 2010-03-25 03:57:19 PDT
Created attachment 51621 [details]
Fixes the timing functions in transform transitions with AC

If the animation value doesn't have timing function set, we need to use the animation's timing function.
        
Fixed also a bug in passing the duration to solveCubicBezierFunction. The duration was divided two times by 1000 and meanwhile casted to int. It needs to be kept as double and divided by 1000 only once.
Comment 2 Noam Rosenthal 2010-03-25 04:13:40 PDT
LGTM :)
Comment 3 Eric Seidel (no email) 2010-03-26 00:54:16 PDT
Comment on attachment 51621 [details]
Fixes the timing functions in transform transitions with AC

Can't we make an automated test for this?  Otherwise this change looks fine.
Comment 4 Noam Rosenthal 2010-03-26 00:57:13 PDT
We actually can't automate the testing until QGraphicsWebView is part of our automated test process. For now we have to work on that alongside fixing AC bugs the "un-automated" way.
Comment 5 Simon Hausmann 2010-03-28 02:22:22 PDT
(In reply to comment #4)
> We actually can't automate the testing until QGraphicsWebView is part of our
> automated test process. For now we have to work on that alongside fixing AC
> bugs the "un-automated" way.

... or changing DRT before continuing with this.
Comment 6 WebKit Commit Bot 2010-03-28 02:46:12 PDT
Comment on attachment 51621 [details]
Fixes the timing functions in transform transitions with AC

Clearing flags on attachment: 51621

Committed r56685: <http://trac.webkit.org/changeset/56685>
Comment 7 WebKit Commit Bot 2010-03-28 02:46:17 PDT
All reviewed patches have been landed.  Closing bug.
Comment 8 Simon Hausmann 2010-03-28 14:47:07 PDT
Revision r56685 cherry-picked into qtwebkit-2.0 with commit b3d7ff975d5e5e858e969b524c501fcd03fb40c9